Style adjustments to fix overflows

--- a/css/styles-wide.css
+++ b/css/styles-wide.css
@@ -4,7 +4,7 @@
   }
 
   #map-container {
-    height: 85vh;
+    height: 87vh;
     width: 50%;
   }
 
@@ -14,7 +14,7 @@
 
   #restaurants-container {
     width: 50%;
-    height: 85vh;
+    height: 87vh;
     overflow-y: scroll;
   }
 
