--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@
 
 /* ====================== Map ====================== */
 #map {
-  height: 87vh;
   width: 100%;
   background-color: #ccc;
 }
